packages/kotlin/ttrp-frontend/src/test/resources/negative/fail-001-unknown-island.ttrp
container h target polars on failure of ghost """sql
select 1
"""
